--- a/测试.html
+++ b/测试.html
@@ -7,40 +7,24 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <style>
-        .box{
-            width: 200px;
-            height:200px;
-            background-color: #5fc0cd;
-            position: absolute;
-            top:200px;
-            left: 200px;
-        }
+
         #btn{
             width: 20px;
             height: 20px;
             border-radius: 50%;
-            position: absolute;
-            top: -10px;
-            right: -10px;
         }
     </style>
 </head>
 <body>
-
+    <button id="btn">0</button>
     <script>
         var arr=[1,2,3,4,5,6,7,8];
-        function shuffle(array) {
-            var length=array.length;
-            var shuffled= Array(length);
-            for(var index=0,rand;index <length ;index++){
-                rand=parseInt(Math.random()*(index+1));
-                shuffled[index]=shuffled[rand];
-                shuffled[rand]=array[index]
-            }
-            return shuffled;
+        var name ="a";
+        var btn =document.getElementById("btn");
+        btn.onclick=a;
+        function a() {
+            var bbb=window.open("test.html");
         }
-        shuffle(arr);
-        console.log(  shuffle(arr));
     </script>
 </body>
 </html>
