--- a/js2-skip.html
+++ b/js2-skip.html
@@ -5,28 +5,77 @@
         <meta name="viewport"
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>页面跳转</title>
-        <link rel="stylesheet" type="text/css" href="css/js2-skip.css">
-        <script type="text/javascript" src="js/js2-1.js"></script>
+        <title>页面跳转</title> 
+        <link rel="stylesheet" type="text/css" href="css/js2-1.css">
+        <script type="text/javascript" src="js\js2-1.js"></script>
     </head>
     <body>
         <div class="header">
-            <button class="btn-1" type="button"><img src="photo/task7-2.png" class="btn-img-1"/ ></button>
+            <button class="btn-1" type="button"><img src="photo/Back-Icon.png" class="btn-img-1"/ ></button>
             <span>玩家配比</span>
             <button class="btn-2" type="button"><img src="photo/circled-help.png" class="btn-img-2" /></button>
         </div>
         <div class="main">
-            <h3>玩家配比</h3>
-            <div class="person">
-                <span class="actor-wolf"><img src="photo\js2-1.jpg"><span>杀手 <span id="wolf-num"></span> 人</span> </span>
-                <span class="actor-person"><img src="photo\js2-2.jpg"><span>平民 <span id="person-num"></span>人</span> </span>
+            <div class="player-install">
+                <div class="left-install">玩家配比</div>
+                <div class="right-install">
+                    <div class="player">
+                        
+                    </div>
+                    <div class="install" id="install">点击设置</div>
+                </div>
             </div>
-            <form class="input-container">
-                <label>
-                    请输入玩家数量<input type="text" class="input"  id="input"><span class="text">玩家数量为4-18</span>
-                </label>
+            <form class="man-ghost">
+                    <input type="text" placeholder="水民词组" class="man" id="man">
+                    <input type="text" placeholder="幽灵词组" class="ghost" id="ghost">
             </form>
+            <div class="man-mun">
+                <form>
+                    <label>
+                        玩家人数<input type="text" id="manNum" class="person-num" value="6">人
+                    </label>
+                    <div class="btn-control">
+                          <button type="button" class="subtraction">-</button>
+                          <input  class="slider" id="slider-block"  type="range" min="6" max="18" value="6" step="1"/>
+                          <button type="button" class="add">+</button>
+                    </div>
+
+
+                </form>
+            </div>
+        </div>
+        <div class="footer">
             <button type="button">去发牌</button>
         </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.js"></script>
+        <script type="text/javascript" src="js/js2-1.js"></script>
     </body>
 </html>
